Import of AJOLMA/Geo-Raster-0.31 from CPAN.
gitpan-cpan-distribution: Geo-Raster
gitpan-cpan-version:      0.31
gitpan-cpan-path:         AJOLMA/Geo-Raster-0.31.tar.gz
gitpan-cpan-author:       AJOLMA
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -106,3 +106,7 @@ Revision history for Perl extension Geo::RasterAlgebra, formerly (Grid).
 0.21 released
 	- better detection of libral location
 	- test functions have_netpbm and have_pgplot
+0.3 released Mar 16 2005
+	- lots of tests and bug fixes
+0.31 relesed Apr 23 2005
+	- improving the 0.3
