Import of AJOLMA/Geo-Raster-0.61 from CPAN.
gitpan-cpan-distribution: Geo-Raster
gitpan-cpan-version:      0.61
gitpan-cpan-path:         AJOLMA/Geo-Raster-0.61.tar.gz
gitpan-cpan-author:       AJOLMA
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -115,3 +115,8 @@ Revision history for Perl extension Geo::RasterAlgebra, formerly (Grid).
 	- added support for GDAL, Gtk2, ...
 0.41 release Mar 6 2006
 0.42 release Mar 6 2006
+0.50 release Oct 30 2006
+0.61 release Jul 1 2007
+	- use with libral 0.61
+	- split into several files
+	- moved all GUI code into Gtk2::Ex::Geo::Raster
